se agregan botones

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
         .container{
             max-width: 100%;
         }
+    /* Supporting marketing content */
+      .marketing {
+        margin: 60px 0;
+      }
+      .marketing p + h4 {
+        margin-top: 28px;
+      }
 
     </style>
     <style type="text/css">
@@ -221,26 +228,26 @@
             </div>
       <hr>
 
-      <div class="row-fluid marketing">
-        <div class="span4">
-          <img width="40%" height="40%" src="http://i.imgur.com/dVoNgA7.png" alt=""/>
-          <h3>Make a team</h3>
+
+      <div class="row-fluid">
+        <div class="span4">
+          <img width="40%" height="40%" src="http://i.imgur.com/Gfxhhwq.jpg" alt=""/>
+          <h2>Make a team</h2>
           <p>Invite nearby sport enthusiasts to practice a team sport with you!</p>
-        </div>
-
-        <div class="span4">                  
-          <img width="40%" height="40%" src="http://i.imgur.com/9HsV0dc.jpg" alt=""/>
- 		  <h3>Challenge others</h3>
+        </div>
+        <div class="span4">
+          <img width="40%" height="40%" src="http://i.imgur.com/dVoNgA7.png" alt=""/>
+          <h2>Challenge others</h2>
           <p>Spice up your normal practice challenging other teams with similar level of skill.</p>
-        </div>
-
-        <div class="span4">      
-          <img width="40%" height="40%" src="http://i.imgur.com/Gfxhhwq.jpg" alt=""/>
-         <h3>Find a partner</h3>
+       </div>
+        <div class="span4">
+          <img width="40%" height="40%" src="http://i.imgur.com/9HsV0dc.jpg" alt=""/>
+          <h2>Find a partner</h2>
           <p>Make new friends and discover sports your couldn't practice on your own.</p>
-        </div>
-    </div>
+        </div>
+      </div>
 <hr>
+
 
 </div> <!-- /container -->
 
@@ -286,20 +293,17 @@
                 
 
 
-		<!-- AddThis Button BEGIN -->
-		<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
-			<a class="addthis_button_facebook"></a>
-			<a class="addthis_button_twitter"></a>
-			<a class="addthis_button_pinterest_share"></a>
-			<a class="addthis_button_google_plusone_share"></a>
-		</div>
-		<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
-		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5202e14c7ac562ec"></script>
-		<!-- AddThis Button END -->
-
-
-
-
+        <!-- AddThis Button BEGIN -->
+        <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+        <a class="addthis_button_facebook"></a>
+        <a class="addthis_button_twitter"></a>
+        <a class="addthis_button_pinterest_share"></a>
+        <a class="addthis_button_google_plusone_share"></a>
+        <a class="addthis_button_compact"></a><a class="addthis_counter addthis_bubble_style"></a>
+        </div>
+        <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+        <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5202e14c7ac562ec"></script>
+        <!-- AddThis Button END -->
 
 		</div>
             </div>
